@@ -1,3 +1,8 @@
+2009-10-21  Andrew John Hughes  <ahughes@redhat.com>
+
+	* Makefile.am:
+	Pick up HotSpot URL from hotspot.map.
+
 2009-10-26 Jon VanAlten <jon.vanalten@redhat.com>
 
 	* patches/icedtea-libraries.patch: Check for libjpeg.so.7.
